--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,14 +5,14 @@ package_manager = "yarn"
 resolution = true
 skip-lint = false
 
-[programs.localnet]
+[programs.devnet]
 fruitninja = "8LJqbPMhiDLp4vbzdfR7wHwY6VoYajzRkqafK9TS2HNB"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
