--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "types": ["mocha", "chai"],
     "typeRoots": ["./node_modules/@types"],
-    "lib": ["es2015"],
+      "lib": [
+    "esnext",
+    "dom"
+  ],
     "module": "commonjs",
     "target": "es6",
     "esModuleInterop": true
